--- a/styles/essay.css
+++ b/styles/essay.css
@@ -9,7 +9,12 @@
   overflow-y: auto;
 }
 .h5p-essay .h5p-essay-text {
-  width: 100%;
-  height: 10em;
   overflow-y: auto;
+  padding: 0.25em 0.4em;
+  width: calc(100% - 1em);
+  resize: none;
+  border: 1px solid #C7C7C7;
+  border-top: 2px solid #C7C7C7;
+  font-size: 16px;
+  font-family: Arial, sans-serif;
 }
