--- a/styles/essay.css
+++ b/styles/essay.css
@@ -12,7 +12,7 @@
 }
 
 .h5p-essay .h5p-essay-solution-container {
-  margin: 0 0 1em 0;
+  margin: 1em 0 0 0;
   padding: 1em;
   background: #FAFAFA;
 }
