--- a/styles/essay.css
+++ b/styles/essay.css
@@ -12,7 +12,7 @@
 }
 
 .h5p-essay .h5p-essay-solution-container {
-  margin: 1em 0 0 0;
+  margin: 0;
   padding: 1em;
   background: #FAFAFA;
 }
@@ -25,6 +25,7 @@
 .h5p-essay .h5p-essay-solution-introduction {
   font-size: 1em;
   line-height: 1.2;
+  margin-bottom: 1em;
 }
 
 .h5p-essay .h5p-essay-solution-sample {
@@ -32,7 +33,6 @@
   border: 1px solid #e0e0e0;
   overflow: auto;
   overflow-x: hidden;
-
   list-style: none;
   padding: 0;
   margin: 0;
@@ -42,9 +42,9 @@
 
 .h5p-essay .h5p-essay-solution-sample-text {
   display: inline-flex;
-  padding: 0.5em 0em 0.5em 1em;
+  padding: 0.5em 1em 0.5em 1em;
   margin: 0;
-  line-height: 1.2;
+  line-height: 1.4;
 }
 
 .h5p-essay .h5p-essay-input-field-textfield {
