--- a/styles/essay.css
+++ b/styles/essay.css
@@ -11,7 +11,7 @@
 }
 
 .h5p-essay .h5p-essay-solution-container {
-  margin: 0 0 0.5em 0;
+  margin: 0 1em 0.5em 1em;
   padding: 1em;
   background: #FAFAFA;
 }
