Add new design (alpha)

--- a/styles/essay.css
+++ b/styles/essay.css
@@ -9,68 +9,74 @@
 }
 
 .h5p-essay .h5p-essay-solution-container {
-  margin: 0 1em 0.5em 1em;
-  padding: 1em;
-  background: #FAFAFA;
+  background: var(--h5p-theme-ui-base);
+  margin: var(--h5p-theme-spacing-m);
 }
 
 .h5p-essay .h5p-essay-solution-title {
-  font-size: 1.125em;
-  margin-bottom: 0.5em;
+  color: var(--h5p-theme-text-primary);
+  font-size: var(--h5p-theme-font-size-xl);
+  font-weight: 600;
+  margin-bottom: var(--h5p-theme-spacing-m);
 }
 
 .h5p-essay .h5p-essay-solution-introduction {
-  font-size: 1em;
-  line-height: 1.2;
-  margin-bottom: 1em;
+  font-size: var(--h5p-theme-font-size-m-small);
+  margin-bottom: var(--h5p-theme-spacing-s);
 }
 
 .h5p-essay .h5p-essay-solution-sample {
-  background: #FFFFFF;
-  border: 1px solid #e0e0e0;
+  background: var(--h5p-theme-ui-base);
+  border: 2px solid var(--h5p-theme-alternative-darker);
+  border-radius: var(--h5p-theme-border-radius-medium);
   overflow: auto;
   overflow-x: hidden;
   list-style: none;
-  padding: 0;
-  margin: 0;
   flex-shrink: 0;
   flex-wrap: wrap;
 }
 
 .h5p-essay .h5p-essay-solution-sample-text {
-  padding: 0.5em 1em 0.5em 1em;
+  padding: calc(var(--h5p-theme-spacing-xs) / 2) var(--h5p-theme-spacing-xs);
   margin: 0;
-  line-height: 1.4;
+  line-height: 1.5;
 }
 
 .h5p-essay .h5p-essay-input-field-textfield {
-  padding: 0.25em 0.4em;
+  background-color: var(--h5p-theme-ui-base);
+  border: 2px solid var(--h5p-theme-alternative-darker);
+  border-radius: var(--h5p-theme-border-radius-medium);
+  color: var(--h5p-theme-text-primary);
+  padding: calc(var(--h5p-theme-spacing-xs) / 2) var(--h5p-theme-spacing-xs);
   width: 100%;
   box-sizing: border-box;
   resize: none;
-  border: 1px solid #C7C7C7;
-  border-top: 2px solid #C7C7C7;
-  font-size: 16px;
-  font-family: Arial, sans-serif;
+  font-size: var(--h5p-theme-font-size-m);
+  font-family: var(--h5p-theme-font-family);
   line-height: 1.5;
 }
 
 .h5p-essay .h5p-essay-input-field-textfield:focus {
-  background-color: #fff;
+  box-shadow: 0 0 0.5em 0 var(--h5p-theme-main-cta-base);
+  border-color: var(--h5p-theme-main-cta-base);
+  outline: 1px ridge var(--h5p-theme-main-cta-base);
 }
 
-/* Reduce bottom and top margin of children */
-.h5p-essay .h5p-essay-input-field-label > * {
-  margin-top: 0.2em;
-  margin-bottom: 0.2em;
+.h5p-essay .h5p-essay-input-field-textfield:disabled {
+  background-color: var(--h5p-theme-alternative-light);
 }
 
 .h5p-essay .h5p-essay-input-field-message-wrapper {
-  overflow:auto;
+  background-color: var(--h5p-theme-alternative-light);
+  border: solid 1px var(--h5p-theme-alternative-base);
+  color: var(--h5p-theme-text-secondary);
+  font-weight: 500;
+  overflow: auto;
+  padding: 0 var(--h5p-theme-spacing-s);
 }
 
 .h5p-essay .h5p-essay-input-field-message-char {
-  font-size: 0.8em;
+  font-size: var(--h5p-theme-font-size-s-small);
   float: left;
 }
 
@@ -79,7 +85,8 @@
 }
 
 .h5p-essay .h5p-essay-input-field-message-save {
-  font-size: 0.8em;
+  color: var(--h5p-theme-text-primary);
+  font-size: var(--h5p-theme-font-size-s-small);
   float: right;
 }
 
@@ -89,9 +96,10 @@
 }
 
 .h5p-essay .h5p-essay-feedback-empty {
-  color: #999999;
+  color: var(--h5p-theme-feedback-neutral-main);
 }
 
 .h5p-essay .h5p-question-explanation-container {
-  margin: 0 1em;
+  margin-bottom: var(--h5p-theme-spacing-m);
+  margin-inline: var(--h5p-theme-spacing-m);
 }
